# mkdocs-minify-html-plugin

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
mkdocs_minify_html_plugin/: plugin.py
python/mkdocs_minify_html_plugin/: _minify_html.pyi  plugin.py
src/: lib.rs
