[package]
name = "mkdocs-minify-html-plugin"
version = "0.3.0"
edition = "2024"
license = "MIT"
include = [
  "/python",
  "/src",
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/pyproject.toml",
  "/README.md",
]
publish = false

[lib]
name = "_minify_html"
crate-type = ["cdylib"]

[dependencies]
minify-html = "=0.16.4"
pyo3 = { version = "=0.24.0", features = ["extension-module"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
