[package]
name = "mkdocs-minify-html-plugin"
version = "0.3.9"
edition = "2024"
license = "MIT"
include = [
  "/python",
  "/src",
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/pyproject.toml",
  "/README.md",
]
publish = false

[lib]
name = "_minify_html"
crate-type = ["cdylib"]

[dependencies]
minify-html = "=0.18.1"
pyo3 = "=0.28.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
