[package]
name = "mkdocs-minify-html-plugin"
version = "0.3.10"
edition = "2024"
license = "MIT"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/python",
  "/src",
]
publish = false

[lib]
crate-type = ["cdylib"]
name = "_minify_html"

[dependencies]
minify-html = "=0.18.1"
pyo3 = "=0.28.3"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
