[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[project]
name = "mkdocs-minify-html-plugin"
version = "0.3.9"
description = "MkDocs plugin for minification using minify-html, an extremely fast and smart HTML + JS + CSS minifier"
readme = "README.md"
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Framework :: MkDocs",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = ["mkdocs>=1.4", "typing-extensions>=4.4; python_version<'3.12'"]
urls.repository = "https://github.com/monosans/mkdocs-minify-html-plugin"
entry-points."mkdocs.plugins".minify_html = "mkdocs_minify_html_plugin.plugin:MinifyHtmlPlugin"

[dependency-groups]
dev = ["mypy[faster-cache]==1.19.0", "ruff==0.14.8"]

[tool.maturin]
python-source = "python"
module-name = "mkdocs_minify_html_plugin._minify_html"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
]

[tool.ruff]
line-length = 80
preview = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  "ANN401",
  "ASYNC109",
  "BLE001",
  "C901",
  "COM812",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D403",
  "D415",
  "D417",
  "DJ008",
  "DOC201",
  "DOC402",
  "DOC501",
  "FURB180",
  "PLR0904",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0916",
  "PLR0917",
  "PLR1702",
  "RUF001",
  "RUF002",
  "RUF003",
  "S110",
  "S112",
  "S308",
  "S311",
  "S404",
  "SIM105",
  "TC001",
  "TC002",
  "TC003",
  "TD002",
  "TD003",
  "TRY400",
]
select = ["ALL"]
unfixable = ["RUF027"]
pydocstyle.convention = "google"
pyupgrade.keep-runtime-typing = true
flake8-self.ignore-names = ["_name_", "_value_"]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false


[tool.mypy]
python_version = "3.10"
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_unreachable = true
allow_redefinition_new = true
local_partial_types = true
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
  "unused-awaitable",
  "unused-ignore",
]
strict_equality_for_none = true
strict = true
