[project]
name = "mkdocs-minify-html-plugin"
version = "0.3.10"
description = "MkDocs plugin for minification using minify-html, an extremely fast and smart HTML + JS + CSS minifier"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
classifiers = [
  "Framework :: MkDocs",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
urls.repository = "https://github.com/monosans/mkdocs-minify-html-plugin"
entry-points."mkdocs.plugins".minify_html = "mkdocs_minify_html_plugin.plugin:MinifyHtmlPlugin"
dependencies = [
  "mkdocs>=1.4,<2",
  "typing-extensions>=4.4; python_version<'3.12'"
]

[dependency-groups]
dev = ["mypy==1.20.1", "ruff==0.15.10"]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "mkdocs_minify_html_plugin._minify_html"
python-source = "python"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
]
